--- a/demo-1/Base.lproj/Main.storyboard
+++ b/demo-1/Base.lproj/Main.storyboard
@@ -260,7 +260,7 @@
                         <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="gXd-fF-VWi"/>
                     </view>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Mn-8c-IhL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -387,7 +387,7 @@
                                     <viewLayoutGuide key="frameLayoutGuide" id="rIh-4m-onN"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="size" keyPath="contentSize">
-                                            <size key="value" width="600" height="0.0"/>
+                                            <size key="value" width="828" height="0.0"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </scrollView>
@@ -523,8 +523,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="woY-PS-i8o" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Trouble shooting" id="T0r-Bq-gA6"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FJk-T1-C8S">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="FJk-T1-C8S">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -605,13 +605,14 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="3Aw-Vy-Ros" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fIV-AS-rEE">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="woY-PS-i8o" kind="relationship" relationship="viewControllers" id="Ndw-EU-61B"/>
                         <segue destination="U9c-rc-14R" kind="relationship" relationship="viewControllers" id="Gkg-Co-l1a"/>
                         <segue destination="h36-yF-cCh" kind="relationship" relationship="viewControllers" id="6Jf-dk-5w7"/>
+                        <segue destination="woY-PS-i8o" kind="relationship" relationship="viewControllers" id="Ndw-EU-61B"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="luh-rJ-xEw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
